--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAPfUXuGp3TmSeHC8aHWIrpsjwhue9vBVQ" />
+
         <activity
             android:name=".Login"
             android:screenOrientation="portrait"
@@ -28,11 +29,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".UM.UMInicio"
-            android:label="@string/title_activity_uminicio"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity
             android:name=".UE.UERegistroViaje"
             android:label="UERegistroViaje"
             android:screenOrientation="portrait"
@@ -40,8 +36,11 @@
         <activity
             android:name=".UE.UEInicio"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            ></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".Registro"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" ></activity>
     </application>
 
 </manifest>
