--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,15 +42,14 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name=".UT.UTInicio"
-            android:label="@string/title_activity_utinicio"
-
-        <activity
             android:name=".UE.UEViajeDisponible"
             android:label="UEViajeDisponible"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-
+        <activity
+            android:name=".UT.UTInicio"
+            android:label="@string/title_activity_utinicio2"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
